--- a/splash.html
+++ b/splash.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+t<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
@@ -10,7 +10,7 @@
 <link rel="shortcut icon" href="/images/splash.jpg" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="/splash.css">
 
-<title>$gatewayname Hotspot Gateway.</title>
+<title>Guest Hotspot Gateway.</title>
 
 <!--
 Content:
@@ -90,7 +90,7 @@ or appended to the query string of the authtarget link:
 </form>
 	
 <hr>
-<copy-right>Copyright &copy; The Nodogsplash Contributors 2004-2023.<br>This software is released under the GNU GPL license.</copy-right>
+<copy-right>Copyright &copy;2025 <br>This software is released under the GNU GPL license.</copy-right>
 
 </div></div>
 </body>
