--- a/splash.html
+++ b/splash.html
@@ -90,7 +90,7 @@ or appended to the query string of the authtarget link:
 </form>
 	
 <hr>
-<copy-right>Copyright &copy;2025 <br>This software is released under the GNU GPL license.</copy-right>
+<copy-right>Copyright &copy;2025 ZenNetForge Project jaime.galvez@linuxmail.org. <br>This software is released under the GNU GPL license.</copy-right>
 
 </div></div>
 </body>
