--- a/status.html
+++ b/status.html
@@ -1,43 +1,40 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-<meta http-equiv="Pragma" content="no-cache">
-<meta http-equiv="Expires" content="0">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="/images/splash.jpg" type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="/splash.css">
 
-<link rel="shortcut icon" href="/images/splash.jpg" type="image/x-icon">
-<link rel="stylesheet" type="text/css" href="/splash.css">
-
-<title>$gatewayname Hotspot Gateway Status</title>
-
-<!--
-Status:
-	The Status page is served to a client if they are already authenticated.
-	This may occur if the client user selects "Back" on the CPD browser
-	screen after they have successfully authenticated.
-
-	The same template variables are available as for the splash page.
--->
-
+  <title>Invitados Hotspot WIFI - Estado</title>
 </head>
-
 <body>
-<div class="offset">
-<med-blue>$gatewayname Hotspot Gateway.</med-blue>
-<div class="insert">
-<br>
-<img src="/images/splash.jpg" alt="You are already logged in and have access to the Internet.">
-<hr>
-<p><big-red>You are already logged in and have access to the Internet.</big-red></p>
-<hr>
-<p><italic-black>You can use your Browser, Email and other network Apps as you normally would.</italic-black></p>
+  <div class="card">
+    <img src="/images/splash.jpg" alt="Logo del Hotspot" class="logo">
 
-<hr>
-<copy-right>Copyright &copy;2025 ZenNetForge Project jaime.galvez@linuxmail.org. <br>This software is released under the GNU GPL license.</copy-right>
+    <h2 class="title">INVITADOS Hotspot WIFI</h2>
 
-</div></div>
+    <hr>
+    <p class="welcome">
+      ✅ Ya estás autenticado y tienes acceso a Internet.
+    </p>
+    <hr>
+
+    <p class="info">
+      Ahora puedes usar tu navegador, correo electrónico y otras aplicaciones de red normalmente.
+    </p>
+
+    <hr>
+    <p class="footer">
+      &copy; 2025 ZenNetForge Project · 
+      <a href="mailto:jaime.galvez@linuxmail.org">jaime.galvez@linuxmail.org</a><br>
+      Este software se publica bajo licencia GNU GPL.
+    </p>
+  </div>
 </body>
 </html>
