--- a/splash.html
+++ b/splash.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <meta charset="utf-8">
-  <title>Invitados Hotspot WiFi</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Estilos externos -->
-  <link rel="stylesheet" href="splash.css">
+  <link rel="shortcut icon" href="/images/splash.jpg" type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="/splash.css">
+
+  <title>Invitados Hotspot WIFI</title>
 </head>
 <body>
   <div class="card">
-    <img src="/images/splash.jpg" alt="Logo del Hotspot" class="logo">
+    <img src="/images/splash.jpg" alt="Hotspot Logo" class="logo">
 
-    <h2>Invitados Hotspot WiFi/h2>
-    <p>Por favor, inicia sesión para acceder a Internet</p>
+    <h2 class="title">Invitados Hotspot WiFi</h2>
 
-    <form method="POST" action="login.php">
+    <p class="welcome">¡Bienvenido!</p>
+    <p class="info">Para acceder a Internet, por favor haz clic en el botón <b>Continuar</b>.</p>
+
+    <form method="GET" action="$authaction" class="login-form">
       <input type="hidden" name="tok" value="$tok">
       <input type="hidden" name="redir" value="$redir">
 
-      <div class="form-group">
-        <label for="username">Usuario</label>
-        <input type="text" id="username" name="username" required>
-      </div>
+      <!-- Si activas autenticación con usuario/contraseña:
+      <label for="username">Usuario:</label>
+      <input type="text" id="username" name="username" required>
+      
+      <label for="password">Contraseña:</label>
+      <input type="password" id="password" name="password" required>
+      -->
 
-      <div class="form-group">
-        <label for="password">Contraseña</label>
-        <input type="password" id="password" name="password" required>
-      </div>
-
-      <input type="submit" value="Entrar" class="btn">
+      <button type="submit" class="btn">Continuar</button>
     </form>
 
-    <div class="footer">
-      &copy; 2025 ZenNetForge Project · GNU GPL
-    </div>
+    <p class="footer">
+      &copy; 2004-2025 Jaime Galvez Martinez jaime.galvez@linuxmail.org.<br>
+      Software liberado bajo licencia <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU GPL</a>.
+    </p>
   </div>
 </body>
 </html>
