--- a/status.html
+++ b/status.html
@@ -31,7 +31,7 @@
 
     <hr>
     <p class="footer">
-      &copy; 2025 ZenNetForge Project · 
+      &copy; 2025 Jaime Galvez Martinez · 
       <a href="mailto:jaime.galvez@linuxmail.org">jaime.galvez@linuxmail.org</a><br>
       Este software se publica bajo licencia GNU GPL.
     </p>
