--- a/splash.html
+++ b/splash.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="/images/splash.jpg" alt="Hotspot Logo" class="logo">
+    <img src="/splash.jpg" alt="Hotspot Logo" class="logo">
 
     <h2 class="title">Invitados Hotspot WiFi</h2>
 
