--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
@@ -21,6 +21,12 @@
     <p class="welcome">¡Bienvenido!</p>
     <p class="info">Para acceder a Internet, por favor haz clic en el botón <b>Continuar</b>.</p>
 
+    <!-- Datos del dispositivo -->
+    <div class="device-info">
+      <p><b>Dirección IP:</b> $ip</p>
+      <p><b>Dirección MAC:</b> $mac</p>
+    </div>
+
     <form method="GET" action="$authaction" class="login-form">
       <input type="hidden" name="tok" value="$tok">
       <input type="hidden" name="redir" value="$redir">
@@ -37,7 +43,7 @@
     </form>
 
     <p class="footer">
-      &copy; 2004-2025 Jaime Galvez Martinez jaime.galvez@linuxmail.org.<br>
+      &copy; 2025-2026 Jaime Galvez Martinez jaime.galvez@linuxmail.org.<br>
       Software liberado bajo licencia <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank">GNU GPL</a>.
     </p>
   </div>
